--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.80.1"
   },
   "patchedDependencies": {
-    "@unseenco/taxi@1.7.0": "patches/@unseenco%2Ftaxi@1.7.0.patch"
+    "@unseenco/taxi@1.7.0": "patches/@unseenco%2Ftaxi@1.7.0.patch",
+    "@11ty/eleventy-plugin-webc@0.11.2": "patches/@11ty%2Feleventy-plugin-webc@0.11.2.patch"
   }
 }
