🗄️  - Cleanup route-based animation system, respond to prefersReducedMotion, separate files for animations and routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "prettier.singleQuote": true,
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
   "[html]": {
     "editor.formatOnSave": true
   },
