--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.5",
     "@rollup/plugin-terser": "^0.4.4",
     "@sindresorhus/slugify": "^2.2.1",
     "@unseenco/taxi": "1.8.0",
