--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rollup": "^4.28.1"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^5.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "@rollup/plugin-dynamic-import-vars": "^2.1.5",
