👔 - Add stylelint, first-pass lint style code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
   "files.associations": {
     // extension as blob: language
     "*.webc": "html"
-  }
+  },
+  "stylelint.validate": ["css", "scss"],
 }
