📝 - Matter case study, polish for scrolling, polish for content image rendering, better spotify widget markup

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [dev]
-    command = 'npm run start'
+    command = 'bun run start'
     publish = '_site'
-    functions = 'functions'
+    functions = 'src/functions'
