--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "rollup": "^4.28.1"
   },
   "dependencies": {
-    "@11ty/eleventy-img": "v6.0.0-beta.1",
+    "@11ty/eleventy-img": "v6.0.0",
     "@11ty/eleventy-plugin-rss": "^2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
