--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,5 @@
     "*.webc": "html"
   },
   "stylelint.validate": ["css", "scss"],
-  "json.schemas": [{
-    "fileMatch": ["src/_data/recentReading.js"],
-    "url": "./recentReading.schema.json"
-  }]
+  "json.validate.enable": true,
 }
