--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@11ty/eleventy": "^3.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "dotenv": "^16.4.5",
-    "rollup": "^4.28.1"
+    "rollup": "^4.28.1",
+    "rollup-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
     "@11ty/eleventy-img": "v6.0.0",
