--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@11ty/eleventy": "^3.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "dotenv": "^16.4.5",
+    "netlify-plugin-cache": "^1.0.3",
     "rollup": "^4.28.1",
     "rollup-plugin-glsl": "^1.3.0"
   },
