✍️ - Add micropub endpoint and basic micropub function

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@11ty/eleventy-plugin-rss": "^2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
+    "@octokit/rest": "^21.1.1",
     "@rollup/plugin-dynamic-import-vars": "^2.1.5",
     "@rollup/plugin-terser": "^0.4.4",
     "@sindresorhus/slugify": "^2.2.1",
@@ -39,6 +40,7 @@
     "markdown-it-attrs": "^4.2.0",
     "markdown-it-mathjax3": "^4.3.2",
     "markdown-it-prism": "^2.3.0",
+    "octokit-commit-multiple-files": "^5.0.3",
     "sass": "^1.80.1",
     "simplex-noise": "^4.0.3",
     "stylelint": "^16.12.0",
