🌉 - Add brid.gy fedi targets to netlify redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,13 @@
       "_site/img/",
       ".cache"
     ]
+
+# Brid.gy Fed set up to use henry.codes as a fed target
+[[redirects]]
+    from = "/.well-known/host-meta*"
+    to = "https://fed.brid.gy/.well-known/host-meta:splat"
+    status = 302
+[[redirects]]
+    from = "/.well-known/webfinger*"
+    to = "https://fed.brid.gy/.well-known/webfinger"
+    status = 302
