--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@unseenco/taxi": "1.8.0",
     "concurrently": "^9.0.1",
     "dat.gui": "^0.7.9",
+    "dedent": "^1.7.0",
     "eleventy-plugin-toc": "^1.1.5",
     "gsap": "^3.12.5",
     "jsdom": "^25.0.1",
