--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@unseenco/taxi": "1.8.0",
     "concurrently": "^9.0.1",
     "dat.gui": "^0.7.9",
+    "dedent": "^1.7.0",
     "eleventy-plugin-toc": "^1.1.5",
-    "gsap": "^3.12.5",
+    "gsap": "^3.13",
     "jsdom": "^25.0.1",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-attrs": "^4.2.0",
